@@ -77,7 +77,7 @@ public class RecipientListRouterParserTests {
 		assertEquals(RecipientListRouter.class, handler.getClass());
 		RecipientListRouter router = (RecipientListRouter) handler;
 		DirectFieldAccessor accessor = new DirectFieldAccessor(router);
-		assertEquals(new Long(-1), new DirectFieldAccessor(
+		assertEquals(Long.valueOf(-1), new DirectFieldAccessor(
 				accessor.getPropertyValue("messagingTemplate")).getPropertyValue("sendTimeout"));
 		assertEquals(Boolean.FALSE, accessor.getPropertyValue("applySequence"));
 		assertEquals(Boolean.FALSE, accessor.getPropertyValue("ignoreSendFailures"));
@@ -90,7 +90,7 @@ public class RecipientListRouterParserTests {
 		assertEquals(RecipientListRouter.class, handler.getClass());
 		RecipientListRouter router = (RecipientListRouter) handler;
 		DirectFieldAccessor accessor = new DirectFieldAccessor(router);
-		assertEquals(new Long(1234), new DirectFieldAccessor(
+		assertEquals(Long.valueOf(1234), new DirectFieldAccessor(
 				accessor.getPropertyValue("messagingTemplate")).getPropertyValue("sendTimeout"));
 		assertEquals(Boolean.TRUE, accessor.getPropertyValue("applySequence"));
 		assertEquals(Boolean.TRUE, accessor.getPropertyValue("ignoreSendFailures"));
