@@ -85,13 +85,13 @@ public class SpelSplitterIntegrationTests {
 		Message<?> two = output.receive(0);
 		Message<?> three = output.receive(0);
 		Message<?> four = output.receive(0);
-		assertEquals(new Integer(1), one.getPayload());
+		assertEquals(Integer.valueOf(1), one.getPayload());
 		assertEquals("foo", one.getHeaders().get("foo"));
-		assertEquals(new Integer(2), two.getPayload());
+		assertEquals(Integer.valueOf(2), two.getPayload());
 		assertEquals("foo", two.getHeaders().get("foo"));
-		assertEquals(new Integer(3), three.getPayload());
+		assertEquals(Integer.valueOf(3), three.getPayload());
 		assertEquals("foo", three.getHeaders().get("foo"));
-		assertEquals(new Integer(4), four.getPayload());
+		assertEquals(Integer.valueOf(4), four.getPayload());
 		assertEquals("foo", four.getHeaders().get("foo"));
 		assertNull(output.receive(0));
 	}
