@@ -149,7 +149,7 @@ public class HttpOutboundGatewayParserTests {
 		assertEquals(errorHandlerBean, templateAccessor.getPropertyValue("errorHandler"));
 		Object sendTimeout = new DirectFieldAccessor(
 				handlerAccessor.getPropertyValue("messagingTemplate")).getPropertyValue("sendTimeout");
-		assertEquals(new Long("1234"), sendTimeout);
+		assertEquals(Long.valueOf("1234"), sendTimeout);
 		Map<String, Expression> uriVariableExpressions =
 				(Map<String, Expression>) handlerAccessor.getPropertyValue("uriVariableExpressions");
 		assertEquals(1, uriVariableExpressions.size());
