@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -414,7 +414,7 @@ public class JmsChannelFactoryBean extends AbstractFactoryBean<AbstractJmsChanne
 		if (this.containerType == null) {
 			this.containerType = DefaultMessageListenerContainer.class;
 		}
-		AbstractMessageListenerContainer container = this.containerType.newInstance();
+		AbstractMessageListenerContainer container = this.containerType.getConstructor().newInstance();
 		container.setAcceptMessagesWhileStopping(this.acceptMessagesWhileStopping);
 		container.setAutoStartup(this.autoStartup);
 		container.setClientId(this.clientId);
