@@ -88,7 +88,7 @@ public class DefaultJmsHeaderMapperTests {
 	@Test
 	public void testJmsCorrelationIdNumberConvertsToString() throws JMSException {
 		Message<String> message = MessageBuilder.withPayload("test")
-				.setHeader(JmsHeaders.CORRELATION_ID, new Integer(123)).build();
+				.setHeader(JmsHeaders.CORRELATION_ID, Integer.valueOf(123)).build();
 		DefaultJmsHeaderMapper mapper = new DefaultJmsHeaderMapper();
 		javax.jms.Message jmsMessage = new StubTextMessage();
 		mapper.fromHeaders(message.getHeaders(), jmsMessage);
@@ -120,7 +120,7 @@ public class DefaultJmsHeaderMapperTests {
 	@Test
 	public void testJmsTypeIgnoredIfIncorrectType() throws JMSException {
 		Message<String> message = MessageBuilder.withPayload("test")
-				.setHeader(JmsHeaders.TYPE, new Integer(123)).build();
+				.setHeader(JmsHeaders.TYPE, Integer.valueOf(123)).build();
 		DefaultJmsHeaderMapper mapper = new DefaultJmsHeaderMapper();
 		javax.jms.Message jmsMessage = new StubTextMessage();
 		mapper.fromHeaders(message.getHeaders(), jmsMessage);
@@ -143,7 +143,7 @@ public class DefaultJmsHeaderMapperTests {
 	@Test
 	public void testUserDefinedPropertyMappedFromHeader() throws JMSException {
 		Message<String> message = MessageBuilder.withPayload("test")
-				.setHeader("foo", new Integer(123))
+				.setHeader("foo", Integer.valueOf(123))
 				.build();
 		DefaultJmsHeaderMapper mapper = new DefaultJmsHeaderMapper();
 		javax.jms.Message jmsMessage = new StubTextMessage();
@@ -157,7 +157,7 @@ public class DefaultJmsHeaderMapperTests {
 	@Test
 	public void testUserDefinedPropertyMappedFromHeaderWithCustomPrefix() throws JMSException {
 		Message<String> message = MessageBuilder.withPayload("test")
-				.setHeader("foo", new Integer(123))
+				.setHeader("foo", Integer.valueOf(123))
 				.build();
 		DefaultJmsHeaderMapper mapper = new DefaultJmsHeaderMapper();
 		mapper.setOutboundPrefix("custom_");
@@ -307,9 +307,9 @@ public class DefaultJmsHeaderMapperTests {
 	@Test
 	public void testPropertyMappingExceptionIsNotFatal() throws JMSException {
 		Message<String> message = MessageBuilder.withPayload("test")
-				.setHeader("foo", new Integer(123))
-				.setHeader("bad", new Integer(456))
-				.setHeader("bar", new Integer(789))
+				.setHeader("foo", Integer.valueOf(123))
+				.setHeader("bad", Integer.valueOf(456))
+				.setHeader("bar", Integer.valueOf(789))
 				.build();
 		DefaultJmsHeaderMapper mapper = new DefaultJmsHeaderMapper();
 		javax.jms.Message jmsMessage = new StubTextMessage() {
@@ -334,9 +334,9 @@ public class DefaultJmsHeaderMapperTests {
 	@Test
 	public void testIllegalArgumentExceptionIsNotFatal() throws JMSException {
 		Message<String> message = MessageBuilder.withPayload("test")
-				.setHeader("foo", new Integer(123))
-				.setHeader("bad", new Integer(456))
-				.setHeader("bar", new Integer(789))
+				.setHeader("foo", Integer.valueOf(123))
+				.setHeader("bad", Integer.valueOf(456))
+				.setHeader("bar", Integer.valueOf(789))
 				.build();
 		DefaultJmsHeaderMapper mapper = new DefaultJmsHeaderMapper();
 		javax.jms.Message jmsMessage = new StubTextMessage() {
@@ -421,7 +421,7 @@ public class DefaultJmsHeaderMapperTests {
 	@Test
 	public void attemptToWriteDisallowedCorrelationIdNumberPropertyIsNotFatal() throws JMSException {
 		Message<String> message = MessageBuilder.withPayload("test")
-				.setHeader(JmsHeaders.CORRELATION_ID, new Integer(123))
+				.setHeader(JmsHeaders.CORRELATION_ID, Integer.valueOf(123))
 				.setHeader("foo", "bar")
 				.build();
 		DefaultJmsHeaderMapper mapper = new DefaultJmsHeaderMapper();
